tests/ui/custom_test_frameworks/mismatch.stderr
error[E0277]: the trait bound `TestDescAndFn: Testable` is not satisfied
  --> $DIR/mismatch.rs:9:1
   |
LL | #[test]
   | ------- in this procedural macro expansion
LL | fn wrong_kind(){}
   | ^^^^^^^^^^^^^^^^^ the trait `Testable` is not implemented for `TestDescAndFn`
   |
   = note: required for the cast from `&TestDescAndFn` to `&dyn Testable`
   = note: this error originates in the attribute macro `test` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
